2002-12-16 09:09  huysmans

	* plugins/clock/clock.c: Fix date bug

2002-12-16 08:16  huysmans

	* panel/groups.c: Fix bug with handling old config file

2002-12-13 23:09  huysmans

	* ChangeLog, configure, configure.ac, panel/Makefile.am,
	panel/Makefile.in, panel/builtins.c, panel/builtins.h,
	panel/controls.c, panel/global.h, panel/info.c,
	plugins/Makefile.am, plugins/Makefile.in,
	plugins/systembuttons/Makefile.am,
	plugins/systembuttons/Makefile.in,
	plugins/systembuttons/systembuttons.c: remove last builtins and add
	new systembuttons plugin

2002-12-12 22:20  huysmans

	* ChangeLog, panel/groups.c, panel/groups.h, panel/handle.c: Allow
	user to add a panel control from the handle right-click menu

2002-12-12 16:28  huysmans

	* panel/: main.c, panel.c, panel.h: Improve SIGHUP handling

2002-12-12 12:09  huysmans

	* panel/: panel.c, xfce_support.c: Improve window layer handling

2002-12-12 10:23  huysmans

	* ChangeLog, example.xfce4rc.in: Update default rc file

2002-12-12 10:16  huysmans

	* ChangeLog, configure, configure.ac, panel/Makefile.am,
	panel/Makefile.in, panel/builtins.c, panel/callbacks.c,
	panel/central.c, panel/central.h, panel/controls.c,
	panel/controls.h, panel/controls_dialog.c, panel/dialogs.c,
	panel/dialogs.h, panel/global.h, panel/groups.c, panel/groups.h,
	panel/handle.c, panel/icons.c, panel/icons.h, panel/item.c,
	panel/item_dialog.c, panel/main.c, panel/main.h, panel/panel.c,
	panel/panel.h, panel/popup.c, panel/popup.h, panel/settings.c,
	panel/settings.h, panel/side.c, panel/side.h, panel/wmhints.c,
	panel/wmhints.h, panel/xfce.c, panel/xfce.h, panel/xfce_support.c,
	panel/xfce_support.h, plugins/Makefile.am, plugins/Makefile.in,
	plugins/switcher/Makefile.am, plugins/switcher/Makefile.in,
	plugins/switcher/switcher.c: Huge update. Highlights: switcher
	plugin instead of central panel code. Side panels don't exist
	anymore; there is one list of panel groups. xfce.c split up into