@@ -647,7 +647,6 @@ void clock_add_options(PanelControl * pc, GtkContainer * container,
 
 /*  create clock panel control
 */
-#define API_VERSION 2
 #define CAPTION N_("Xfce clock")
 
 gboolean create_clock_control(PanelControl * pc)
@@ -681,14 +680,6 @@ gboolean create_clock_control(PanelControl * pc)
     return TRUE;
 }
 
-gchar *xfce_plugin_check_version(gint version)
-{
-    if (version != API_VERSION)
-	return "Incompatible plugin version";
-    else
-	return NULL;
-}
-
 G_MODULE_EXPORT void xfce_plugin_init(PanelModule *module)
 {
     module->name = "clock";
@@ -697,4 +688,5 @@ G_MODULE_EXPORT void xfce_plugin_init(PanelModule *module)
 }
 
 
+XFCE_PLUGIN_CHECK_INIT
 
