@@ -1462,9 +1462,6 @@ static void switcher_add_options(PanelControl *pc, GtkContainer *container,
 /*  Switcher panel control
  *  ----------------------
 */
-int is_xfce_panel_control = 1;
-
-#define API_VERSION 2
 #define CAPTION N_("Desktop switcher")
 
 gboolean create_switcher_control(PanelControl *pc)
@@ -1503,14 +1500,6 @@ gboolean create_switcher_control(PanelControl *pc)
     return TRUE;
 }
 
-gchar *xfce_plugin_check_version(gint version)
-{
-    if (version != API_VERSION)
-	return "Incompatible plugin version";
-    else
-	return NULL;
-}
-
 G_MODULE_EXPORT void xfce_plugin_init(PanelModule *module)
 {
     module->name = "switcher";
@@ -1519,4 +1508,5 @@ G_MODULE_EXPORT void xfce_plugin_init(PanelModule *module)
 }
 
 
+XFCE_PLUGIN_CHECK_INIT
 
