@@ -1,3 +1,12 @@
+2002-12-16 18:59  huysmans
+
+	* ChangeLog, panel/Makefile.am, panel/Makefile.in,
+	panel/controls.c, panel/controls.h, panel/controls_dialog.c,
+	panel/groups.c, panel/plugins.h, plugins/clock/clock.c,
+	plugins/mailcheck/mailcheck.c, plugins/switcher/switcher.c,
+	plugins/systembuttons/systembuttons.c, plugins/trash/trash.c: Add
+	new module loading code
+
 2002-12-16 09:09  huysmans
 
 	* plugins/clock/clock.c: Fix date bug
